# leonlog

./: .clangd  .gitignore  CMakeLists.txt  LeonLog.hpp  LeonLogVer.hpp.in  LogToFile.cpp  ThreadName.hpp  common  leonlog.hpp  leonlog.kdev4  log2file.cpp
include/leonlog/: LeonLog.hpp  LeonLogVer.hpp  LogCfg.hpp  LogSet.hpp  StatusFile.hpp
source/: CMakeLists.txt  leonlog.hpp  log2file.cpp
src/: CMakeLists.txt  LogToFile.cpp  leonlog.cpp
src/headers/: CMakeLists.txt  leonlog.h
testing/: CMakeLists.txt  testForking.cpp  testLogging.cpp  testPressure.cpp  testSyslog.cpp
tests/: CMakeLists.txt  UnitTestMain.cpp  testForking.cpp  testLogging.cpp  testPressure.cpp  testSyslog.cpp
text/: INFO.txt
